[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wa-link-parser"
version = "0.1.0"
description = "Extract, classify, and enrich links from WhatsApp chat exports"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "urlextract>=1.9.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "whatstk>=0.7.1"]

[project.scripts]
wa-links = "wa_links:cli"
