[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-link-parser"
version = "0.2.2"
description = "Extract, classify, and enrich links from WhatsApp chat exports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Sreeram Ramasubramanian"},
]
keywords = ["whatsapp", "links", "parser", "chat", "url-extractor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.0",
    "urlextract>=1.9.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "whatstk>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/fishinakleinbottle/whatsapp-link-parser"
Repository = "https://github.com/fishinakleinbottle/whatsapp-link-parser"
Issues = "https://github.com/fishinakleinbottle/whatsapp-link-parser/issues"

[project.scripts]
wa-links = "wa_link_parser.cli:cli"
whatsapp-links = "wa_link_parser.cli:cli"

[tool.setuptools.packages.find]
include = ["wa_link_parser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
